# kaggle_competition_nba

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: logistic_1.joblib  xgb_best.joblib
notebooks/: EDA.ipynb  logistic_reg-1.ipynb  xgboost.ipynb  xgboost_robust_scaler.ipynb
notebooks/dataprep/: final_preprocessing.ipynb
