[tool.poetry]
name = "kaggle-competition-nba"
version = "0.1.0"
description = ""
authors = ["RatanaSovann <sovannratana2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
